2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.
 
2014-01-14  Zachary Hopping <hoppingz@msu.edu>
 * Added code to server.py to return an HTTP response.

 2014-01-21  Zachary Hopping <hoppingz@msu.edu>
 * Fixed line breaks and cleaned up code in server.py.