@@ -7,3 +7,9 @@
 
  2014-01-21  Zachary Hopping <hoppingz@msu.edu>
  * Fixed line breaks and cleaned up code in server.py.
+
+ 2014-01-22  Zachary Hopping <hoppingz@msu.edu>
+ * Added main and handle_connection functions in server.py.
+ * Added handling for content, image, and file request paths to server.py.
+ * Added basic support for POST requests to server.py.
+ * Added tests for different request paths and POST requests in test_server.py.
